     password).

399) Added -S flag to force password read from stdin.

400) Restore coredumpsize resource limit before exec'ing the child
     process (sudo sets it to 0 internally).

401) Truncate unencrypted password to 8 chars if encrypted password is exactly
     13 characters (indicateing standard a DES password).  Many versions
     of crypt() do this for you, but not all (like HP-UX's).

402) Fixed a typo/thinko that broke secureware support for long passwords.

403) Added a new command line switch '-c' to support BSD login classes.
     The '-c' option can be used to sudo a command with specific resource
     limits in the login.conf database.  This feature is optionally enabled
     via the --with-logincap configure switch.  Based on a patch from
     Michael D. Marchionna.

404) Fixed a bug where sudo would hang around and consume CPU if we spawn
     a long-running process.

405) Deal with HP-UX password aging info tacked on to the end of the
     encrypted password.

406) Added set_logname run-time option.  When unset, sudo will not set
     the USER and LOGNAME environment variables.

407) Wildcards are now allowed in the hostnames specified in sudoers.
     The 'fqdn' option is often required for this to be useful.

408) Fixed a bug where host and user qualifiers in a Defaults entry were
     not being used correctly and the entry was being applied globally.

Sudo 1.6.3 released.

409) Fixed targetpw, rootpw, and runaspw options when used with non-passwd
     authentication (pam, etc).

Sudo 1.6.3p1 released.

410) When the targetpw flag is set, use the target username as part
     of the timestamp path.

Sudo 1.6.3p2 released.

411) Fixed a bug that prevented the -H option from being useful.

Sudo 1.6.3p3 released.

412) Fixed a case where a string was used after it has been freed.

Sudo 1.6.3p4 released.

413) Fixed listpw and verifypw sudoers options.

414) Do not write NUL when writing passwd prompt; hag@linnaean.org.

Sudo 1.6.3p5 released.